--- a/templates/components/_header.html
+++ b/templates/components/_header.html
@@ -47,6 +47,7 @@
             width: 100vw;
             margin-left: calc(-50vw + 50%);
             box-sizing: border-box;
+            margin-left: 3px;
         }
         .navbar-custom {
             background: transparent;
