--- a/templates/components/_header.html
+++ b/templates/components/_header.html
@@ -139,8 +139,8 @@
 <body>
     <div class="header-top">
         <div class="header-logo">
-            <!-- Substitua o src abaixo pelo seu logo real se desejar -->
-            <img src="{% static 'logo.png' %}" alt="Logo">
+            <!-- Logo Golden Sat -->
+            <img src="{% static 'logo-golden.png' %}" alt="Logo Golden Sat">
             <span class="header-title">GS SISTEMA INT</span>
         </div>
     </div>
