--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,8 @@
     <style>
         body {
             background-color: #45494E; /* Cor de fundo cinza mais escuro */
-            color: #f2f4f7;
-             /* Cor do texto */
-            /*background-image: url("{% static 'logo-golden.png' %}"); /* Caminho da imagem */
+            color: #f2f4f7; /* Cor do texto */
+            background-image: url("{% static 'logo-golden.png' %}"); /* Caminho da imagem */
             background-repeat: no-repeat;
             background-size: contain; /* Ajusta a imagem para caber na tela */
             background-position: center; /* Centraliza a imagem */
